<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="67dp"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:layout_constraintVertical_bias="0.755"
        app:srcCompat="@drawable/fb_button" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="67dp"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.705"
        app:srcCompat="@drawable/apple_button" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="61dp"
        android:layout_height="47dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:layout_constraintVertical_bias="0.739"
        app:srcCompat="@drawable/google_button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:srcCompat="@drawable/signup_with" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/button_gradient_background"
        android:elevation="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpLastName"
        app:layout_constraintVertical_bias="0.335" />

    <TextView
        android:id="@+id/loginHook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_hook"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpLastName"
        app:layout_constraintVertical_bias="0.195" />

    <EditText
        android:id="@+id/signUpLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_gradient_background"
        android:elevation="20dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/last_name_hint"
        android:importantForAutofill="no"
        android:paddingStart="100dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpFirstName"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/passwordImage6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/signUpLastName"
        app:layout_constraintStart_toStartOf="@+id/signUpLastName"
        app:layout_constraintTop_toTopOf="@+id/signUpLastName"
        app:srcCompat="@drawable/ic_person" />

    <EditText
        android:id="@+id/signUpFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_gradient_background"
        android:elevation="20dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/first_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="100dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpPassword" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_gradient_background"
        android:elevation="20dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="100dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmail" />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_gradient_background"
        android:elevation="20dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="text|textEmailAddress"
        android:outlineAmbientShadowColor="#933D3D"
        android:paddingStart="100dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:shadowColor="#AA4D4D"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getStartedFreeText" />

    <ImageView
        android:id="@+id/emailImage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/signUpEmail"
        app:layout_constraintStart_toStartOf="@+id/signUpEmail"
        app:layout_constraintTop_toTopOf="@+id/signUpEmail"
        app:srcCompat="@drawable/ic_email_48" />

    <ImageView
        android:id="@+id/passwordImage4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/signUpPassword"
        app:layout_constraintStart_toStartOf="@+id/signUpPassword"
        app:layout_constraintTop_toTopOf="@+id/signUpPassword"
        app:srcCompat="@drawable/ic_lock_48" />

    <TextView
        android:id="@+id/getStartedFreeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/get_started_free"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signUpEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <ImageView
        android:id="@+id/passwordImage5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/signUpFirstName"
        app:layout_constraintStart_toStartOf="@+id/signUpFirstName"
        app:layout_constraintTop_toTopOf="@+id/signUpFirstName"
        app:srcCompat="@drawable/ic_person" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/logoImage"
        android:layout_width="345dp"
        android:layout_height="195dp"
        android:src="@drawable/robo_world_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>